# paladino

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_ROADMAP.md  PRODUCT.md  README.md  README_IT.md  SECURITY.md  SECURITY_FIXES_PR.md  SECURITY_FIXES_SUMMARY.md  docker-compose.metabase.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
benchmarks/output/: etl_profile.txt
docs/: MERGE_IMPLEMENTATION_REVIEW.md  MIGRATION_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  SCHEMA.md  SECURITY_TESTING.md  SECURITY_TESTS_SUMMARY.md  TEST_RESULTS.md
docs/ADRs/: README.md  TEMPLATE.md
docs/architecture/: DATA_MODEL.md  PERFORMANCE_TUNING.md  PROVENANCE_SPEC.md  Technical_Architecture_Reference.md
docs/guides/: BENEFICIAL_OWNER_TRACKING_PLAN.md  BUSINESS_PROPOSAL.md  FEATURE_ROADMAP.md  Italian_Knowledge_Graph_PR_Plan.md  PR_Timeline_Visual.md  RISK_HISTORY_TRACKING.md  UNIVERSAL_INGESTION_PLAN.md
docs/reference/: EXPORT_SHORTCUTS.md  PRICE_LIST.md  TEST_REPORT.md  UNIVERSAL_INGESTION_RUNBOOK.md  VALIDATION_PLAN.md
docs/setup/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
frontend/src/: App.tsx  index.css
ideas/: come_scalare_e_vincere.txt  possibly_github_implementations.txt
infra/: docker-compose.yml
paladino/: __init__.py  cli.py  config.py  constants.py  db.py  errors.py  llm_manager.py  models.py  preflight.py  schema_manager.py
paladino/analytics/: __init__.py  anomaly_explainer.py  confidence_engine.py  fraud_patterns.py  gds_manager.py  oracle.py  ownership_graph.py  recommendation_engine.py  risk_engine.py  shell_company_detector.py  temporal_analytics.py  temporal_oracle.py
paladino/app/: __init__.py  abac.py  alert_service.py  api.py  audit_logger.py  comment_service.py  cypher_validator.py  graph_service.py  graphrag_agent.py  investigator.py  notebook_service.py  notification_dispatcher.py  rbac.py  report_generator.py  security.py  temporal_rewriter.py  ubo_report_generator.py
paladino/etl/: __init__.py  anac_download.py  anac_loader.py  anac_quality.py  anac_transform.py  asset_download.py  connection_resolver.py  csv_importer.py  cup_cig_matcher.py  custom_csv_importer.py  deduplicator.py  geography.py  istat_download.py  istat_loader.py  istat_transform.py  ner_pipeline.py  normalizer.py  opencup_download.py  opencup_loader.py  opencup_transform.py  pnnr_loader.py  pnnr_transform.py  universal_ingestor.py  unstructured_loader.py  unstructured_models.py  watermark_manager.py
paladino/ml/: __init__.py  deduplicator.py  embeddings.py  enricher.py  entity_loader.py  name_normalizer.py
schema/: alert_dashboard_queries.cypher  constraints.cypher  indexes.cypher  migrate_comments.cypher  migrate_merge_rollback.cypher  schema.cypher
scripts/: __init__.py  migrate_to_temporal.py  quickstart.bat  quickstart.sh  run_security_tests.py  verify_confidence.py
scripts/analysis/: __init__.py  migrate_date_types.py  quick_validation.py  run_entity_resolution.py  run_fraud_detection.py  run_gds_analytics.py  run_oracle.py  run_temporal_analysis.py
scripts/benchmarks/: run_benchmark.py
scripts/debug/: __init__.py  debug_enrichment.py  debug_load_company.py  debug_opencup.py  investigate.py  upgrade_graph.py
scripts/demo/: __init__.py  demo_universal_ingestion.py  demo_value.py  start_api.py
scripts/etl/: __init__.py  find_cup_in_ocds.py  init_schema.py  run_anac_etl.py  run_cup_cig_matcher.py  run_istat_etl.py  run_opencup_enrichment.py  run_opencup_etl.py  run_pnnr_etl.py  run_supply_chain_etl.py
scripts/test/: __init__.py  test_gds.py  test_gds_isolated.py  test_implementation.py
specs/2026-02-18-confidence-propagation/: plan.md  requirements.md  validation.md
specs/2026-02-18-diff-refinement/: plan.md  requirements.md  validation.md
specs/2026-02-18-temporal-oracle/: plan.md  requirements.md  validation.md
specs/2026-02-18-temporal-templates/: plan.md  requirements.md  validation.md
specs/2026-02-18-tier3-time-travel/: plan.md  requirements.md  validation.md
specs/2026-02-18-tier4-stress-test/: plan.md  requirements.md  validation.md
tests/: __init__.py  conftest.py  test_confidence_engine.py
tests/e2e/: test_anac_pipeline_e2e.py  test_connection_discovery_e2e.py  test_graphrag_e2e.py  test_investigate_repl.py  test_opencup_pipeline_e2e.py
tests/integration/: test_alert_api.py  test_anac_loader_integration.py  test_api_endpoints.py  test_comment_integration.py  test_connection_resolver_integration.py  test_entity_resolution_integration.py  test_graphrag_agent.py  test_graphrag_agent_integration.py  test_istat_loader_integration.py  test_notebook_connection_integration.py  test_opencup_loader_integration.py
tests/security/: __init__.py  test_security_edge_cases.py  test_security_features.py
tests/unit/: test_abac.py  test_agent_dynamic.py  test_agent_reflection.py  test_alert_models.py  test_alert_service.py  test_anac_download.py  test_anac_quality.py  test_anac_transform.py  test_anomaly_explainer.py  test_api_search.py  test_audit_logger.py  test_bulk_import.py  test_comment_service.py  test_config_geo.py  test_connection_resolver.py  test_csv_importer.py  test_cup_cig_matcher.py  test_db_checkpoints.py  test_deduplicator.py  test_enricher.py  test_fraud_patterns.py  test_graph_service.py  (+29 more)
(+11 files in other folders)
